updated tech icon project

--- a/techi/src/main/webapp/about.html
+++ b/techi/src/main/webapp/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Regna Bootstrap Template</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -102,6 +102,11 @@
 	<!--==========================
       About Us Section
     ============================-->
+    
+<p id="subnav">  <strong> HOME >> ABOUT US </strong> &nbsp; &nbsp; &nbsp; &nbsp;
+<a href="about_career.html">Career</a> <span>| </span> 
+<a href="about_client.html">Clients </a>  <span>| </span> 
+<a href="home.html#contact">Contact Us </a></p>
 	<section id="about">
 		<div class="container">
 			<div class="row about-container">
