--- a/techi/src/main/webapp/about_client.html
+++ b/techi/src/main/webapp/about_client.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Regna Bootstrap Template</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -102,6 +102,10 @@
       About Us Section
     ============================-->
     
+  <p id="subnav">  <strong> HOME >> ABOUT US >> Clients </strong> &nbsp; &nbsp; &nbsp; &nbsp;
+  <a href="about.html">About Us</a> <span>| </span> 
+  <a href="career.html">Career </a>  <span>| </span> 
+  <a href="home.html#contact">Contact Us </a></p>
 	<section id="about_client">
 		<div class="container">
 			<div class="row about-container">
@@ -116,7 +120,7 @@
 						upgrading themselves in order to scale up their area of expertise
 						and as a result get good deal of experience.</p>
 				</div>
-
+			</div>
 			
 		</div>
 	</section>
