--- a/techi/src/main/webapp/corporatetraining.html
+++ b/techi/src/main/webapp/corporatetraining.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Regna Bootstrap Template</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -101,6 +101,7 @@
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
+    <p id="subnav"><strong> HOME >> Corporate Training </strong> </p>
 	<section id="traningdemand">
 		<div class="container">
 			<div class="row about-container">
