--- a/techi/src/main/webapp/industries.html
+++ b/techi/src/main/webapp/industries.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Regna Bootstrap Template</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -98,6 +98,11 @@
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
+     <p id="subnav"><strong>Industries </strong> <span>|</span>
+     <a href="industries.html#net">Networking / Telecom</a> <span>| </span> 
+     <a href="industries.html#hlt"> Health Care</a><span>|</span>
+     <a href="industries.html#mnf">Manufacturing</a> <span>| </span> 
+     <a href="industries.html#aut">Automation</a> </p>
 	<section id="network">
 		<div class="container">
 			<div class="row about-container">
