--- a/techi/src/main/webapp/solutiondevelopment.html
+++ b/techi/src/main/webapp/solutiondevelopment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Regna Bootstrap Template</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -166,6 +166,7 @@
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
+    <p id="subnav"><strong> HOME >> Solution Development </strong> </p>
 	<section id="about">
 		<div class="container">
 			<div class="row">
