--- a/techi/src/main/webapp/was.html
+++ b/techi/src/main/webapp/was.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>TECH ICON SOLUTION INC</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -119,12 +119,21 @@
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
+    
+  <p id="subnav"><strong> HOME >> Web Application Services &nbsp;&nbsp;&nbsp;&nbsp; </strong>
+  <a href="was.html#e-com">E-commerce </a> <span>|</span>
+  <a href="was.html#custom">Customized Software</a> <span>|</span>
+  <a href="was.html#prof">Professional Services</a> <span>|
+  </span><a href="was.html#share">Shared Risk & Partnerships</a> <span>|</span>
+  <a href="was.html#webmet">Web Methodology</a> <span>| </span>
+  <a href="was.html#webmod">Web Model</a> <span>| </span>
+  <a href="was.html#spimod">Spiral Model</a> </p>
 	<section id="about">
 		<div class="container">
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-2">
 					<h2 class="title">Web Application Services</h2>
-					<h3 class="title">E-Commerce</h3>
+					<h3 class="title" id="e-com">E-Commerce</h3>
 					<p>Market has changed over a period since the time of advent of
 						internet in a big way. The potential consumers have grown
 						enormously and seemingly everybody likes to make a difference on
@@ -147,7 +156,7 @@
 					<p>We are currently working on Drupal, Joomla, Wordpress,
 						opencart and oscommerce to derive the benefits of customers
 						present in this global requirement.</p>
-					<h3 class="title">Customized Software</h3>
+					<h3 class="title" id="custom">Customized Software</h3>
 					<p>We have a team of professionals working on .net, java and
 						php, who have a great deal of experience and expertise in dealing
 						with the requirements for any new application. Agile computing is
@@ -179,14 +188,14 @@
 						healthcare, mobile computing, logistic segment like transport
 						segment, manufacturing sector and so also in specialized areas
 						like telecom and android for mobile computing.</p>
-					<h5 class="title">Professional Services</h5>
+					<h5 class="title" id="prof">Professional Services</h5>
 					<p>Our services are not only related to software development
 						but goes beyond to address other software enabled services like IT
 						Consulting, Domain expertise, Project Scope and Project
 						Integration through Business / Systems / IT / Process Analysts, QA
 						and Testing Analysts, Manpower Consulting, IT training, Corporate
 						Training and Techno Functional Consultants.</p>
-					<h5 class="title">Shared Risk and Partnerships</h5>
+					<h5 class="title"id="share" >Shared Risk and Partnerships</h5>
 				</div>
 			</div>
 
@@ -223,7 +232,7 @@
 
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-1">
-					<h5 class="title">WEB Methodology</h5>
+					<h5 class="title" id="webmet">WEB Methodology</h5>
 					<p>A specialized team of management is vested to address the
 						needs on day to day basis and process the requirement to our
 						desired effect. We inculcate great degree of patience when it
@@ -246,7 +255,7 @@
 					</div>
 				<div class="col-lg-6 content order-lg-2 order-2">
 					<img src="img/workfolio.jpg" alt="clientmodel image">
-					<h5 class="title">Web Model</h5>
+					<h5 class="title" id="webmod">Web Model</h5>
 					<p>We do not strictly adhere to any specific model owing to
 						varied requirements of our clients. The best viewed approach which
 						is centric to all our development efforts can be worked along the
@@ -265,7 +274,7 @@
 
 			<div class="row about-container">
 				<div class="col-lg-12 content order-lg-1 order-1">
-					<h5 class="title">Spiral Model</h5>
+					<h5 class="title" id="spimod">Spiral Model</h5>
 					<p>The spiral model is based on the assumption on scientific
 						approach and lay more emphasis on risk analysis. The spiral model
 						consists of phases for Planning, Risk Analysis, Engineering and
