--- a/techi/src/main/webapp/prodmaintandsupport.html
+++ b/techi/src/main/webapp/prodmaintandsupport.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Regna Bootstrap Template</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -26,7 +26,20 @@
 <!-- Main Stylesheet File -->
 <link href="css/style.css" rel="stylesheet">
 <style type="text/css">
+#heroid {
+	width: 100%;
+	height: 50vh;
+	background: url(img/services.jpg) top center;
+	background-repeat: no-repeat;
+	background-size: 100% 50%;
+	position: relative;
+}
 
+@media ( min-width : 1024px) {
+	#heroid {
+		background-attachment: fixed;
+	}
+}
 
 #heroid:before {
 	content: "";
@@ -166,6 +179,11 @@
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
+    <p id="subnav"><strong> HOME >> Product Maintenance & Support &nbsp;&nbsp;&nbsp;&nbsp; </strong>
+    <a href="prodmaintandsupport.html#pro">Program Management </a> 
+    <span>|</span><a href="prodmaintandsupport.html#resource">Resource Management</a> 
+    <span>|</span><a href="prodmaintandsupport.html#training">Training</a> 
+    <span>|</span><a href="prodmaintandsupport.html#capa">CAPA</a> <span>| </span></p>
 	<section id="about">
 		<div class="container">
 			<div class="row">
@@ -187,7 +205,7 @@
 						Prevent Action Methodologies(CAPA).</p>
 				</div>
 			</div>
-			<h3>Program Management</h3>
+			<h3 id="pro">Program Management</h3>
 
 			<div class="row">
 				<div class="col-lg-4 content order-lg-1 order-2">
@@ -197,18 +215,18 @@
 				<div class="col-lg-8 content order-lg-1 order-2">
 					<p>We use flexible and established program management methods
 						for continuous sustenance of the legacy products.</p>
-					<h3>Resource Management</h3>
+					<h3 id="resource">Resource Management</h3>
 					<p>We follow a flexible resource management methodology, which
 						enables easy flow of the expert resources from the legacy products
 						to the next generation products. Thus enabling efficient
 						allocation of resources for maintaining existing products and
 						developing new ones, that enable customers to attain continuous
 						success.</p>
-					<h3>Training</h3>
+					<h3 id="training">Training</h3>
 					<p>We provide product specific training to the allocated
 						resources to ramp up, deliver at the highest quality expected and
 						align to the customer business objectives</p>
-					<h3>CAPA</h3>
+					<h3 id="capa">CAPA</h3>
 					<p>Corrective and Preventive Actions are key elements in any
 						Management System that are focussed on Continual Improvement and
 						Customer Satisfaction.</p>
