--- a/techi/src/main/webapp/qualityassurance.html
+++ b/techi/src/main/webapp/qualityassurance.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Regna Bootstrap Template</title>
+<title>TECH ICON</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -26,6 +26,21 @@
 <!-- Main Stylesheet File -->
 <link href="css/style.css" rel="stylesheet">
 <style type="text/css">
+#heroid {
+	width: 100%;
+	height: 50vh;
+	background: url(img/services.jpg) top center;
+	background-repeat: no-repeat;
+	background-size: 100% 50%;
+	position: relative;
+}
+
+@media ( min-width : 1024px) {
+	#heroid {
+		background-attachment: fixed;
+		height: 50vh;
+	}
+}
 
 #heroid:before {
 	content: "";
@@ -59,11 +74,25 @@
 	color: #fff;
 }
 
+@media ( max-width : 768px) {
+	#heroid h1 {
+		font-size: 28px;
+		line-height: 36px;
+	}
+}
 
 #heroid h2 {
 	color: #eee;
 	margin-bottom: 50px;
 	font-size: 24px;
+}
+
+@media ( max-width : 768px) {
+	#heroid h2 {
+		font-size: 18px;
+		line-height: 24px;
+		margin-bottom: 30px;
+	}
 }
 
 #heroid .btn-get-started {
@@ -152,11 +181,13 @@
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
+    <p id="subnav"><strong> HOME >> Quality Assurance &nbsp;&nbsp;&nbsp;&nbsp; </strong>
+   
 	<section id="about">
 		<div class="container">
 			<div class="row">
 
-				<div class="col-lg-12 content order-lg-1 order-2">
+				<div class="content order-lg-1 order-2">
 					<h2 class="title">QUALITY ASSURANCE</h2>
 					<p>Quality of a product plays a major role in the success of
 						the product against multiple competitors. Strategic product
@@ -193,11 +224,9 @@
 				</div>
 
 			</div>
-			
+			<p>Techicon has expertise in the following types of testing:</p>
 			<div class="row">
-			
 				<div class="col-lg-12 content order-lg-1 order-2">
-					<p>Techicon has expertise in the following types of testing:</p>
 					<ul class="box-01">
 						<li>Features Testing</li>
 						<li>Platform Testing</li>
