--- a/techi/src/main/webapp/about_client.html
+++ b/techi/src/main/webapp/about_client.html
@@ -97,12 +97,10 @@
   ============================-->
 	<section class="head-client"></section>
 	<!-- #hero -->
-
-	<main id="main"> <!--==========================
-      About Us Section
-    ============================-->
-    
-  <p id="subnav">  <strong> HOME >> ABOUT US >> Clients </strong> &nbsp; &nbsp; &nbsp; &nbsp;
+<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				 <p id="subnav">  <strong> HOME >> ABOUT US >> Clients </strong> &nbsp; &nbsp; &nbsp; &nbsp;
   <a href="about.html">About Us</a> <span>| </span> 
   <a href="career.html">Career </a>  <span>| </span> 
   <a href="home.html#contact">Contact Us </a></p>
@@ -124,6 +122,12 @@
 			
 		</div>
 	</section>
+			</div>
+		</div>
+	</div>
+	<main id="main"> <!--==========================
+      About Us Section
+    ============================-->
 	<!-- #about --> </main>
 
 	<!--==========================
