--- a/techi/src/main/webapp/corporatetraining.html
+++ b/techi/src/main/webapp/corporatetraining.html
@@ -98,10 +98,17 @@
 	<section class="head-corp-traning"></section>
 	<!-- #hero -->
 
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong> HOME >> Corporate Training </strong>
+			</div>
+		</div>
+	</div>
+
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
-    <p id="subnav"><strong> HOME >> Corporate Training </strong> </p>
 	<section id="traningdemand">
 		<div class="container">
 			<div class="row about-container">
@@ -147,7 +154,7 @@
 			</div>
 		</div>
 	</section>
-	 </main>
+	</main>
 
 	<!--==========================
     Footer
