--- a/techi/src/main/webapp/prodmaintandsupport.html
+++ b/techi/src/main/webapp/prodmaintandsupport.html
@@ -141,7 +141,8 @@
 							<li><a href="corporatetraining.html">Corporate Training</a></li>
 						</ul></li>
 
-					<li class="menu-active menu-has-children"><a href="home.html#services">Service</a>
+					<li class="menu-active menu-has-children"><a
+						href="home.html#services">Service</a>
 						<ul>
 							<li><a href="solutiondevelopment.html">Solution
 									Development</a></li>
@@ -175,15 +176,21 @@
 	<!-- #header -->
 	<!-- #header -->
 	<section id="heroid"></section>
-
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong> HOME >> Product Maintenance & Support
+					&nbsp;&nbsp;&nbsp;&nbsp; </strong> <a href="prodmaintandsupport.html#pro">Program
+					Management </a> <span>|</span><a
+					href="prodmaintandsupport.html#resource">Resource Management</a> <span>|</span><a
+					href="prodmaintandsupport.html#training">Training</a> <span>|</span><a
+					href="prodmaintandsupport.html#capa">CAPA</a> <span>| </span>
+			</div>
+		</div>
+	</div>
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
-    <p id="subnav"><strong> HOME >> Product Maintenance & Support &nbsp;&nbsp;&nbsp;&nbsp; </strong>
-    <a href="prodmaintandsupport.html#pro">Program Management </a> 
-    <span>|</span><a href="prodmaintandsupport.html#resource">Resource Management</a> 
-    <span>|</span><a href="prodmaintandsupport.html#training">Training</a> 
-    <span>|</span><a href="prodmaintandsupport.html#capa">CAPA</a> <span>| </span></p>
 	<section id="about">
 		<div class="container">
 			<div class="row">
