--- a/techi/src/main/webapp/was.html
+++ b/techi/src/main/webapp/was.html
@@ -73,7 +73,8 @@
 							<li><a href="corporatetraining.html">Corporate Training</a></li>
 						</ul></li>
 
-					<li class="menu-active menu-has-children"><a href="home.html#services">Service</a>
+					<li class="menu-active menu-has-children"><a
+						href="home.html#services">Service</a>
 						<ul>
 							<li><a href="solutiondevelopment.html">Solution
 									Development</a></li>
@@ -109,25 +110,29 @@
 	<!--==========================
     Hero Section
   ============================-->
-	<section id="heroid">
-	</section>
+	<section id="heroid"></section>
 	<!-- #hero -->
-
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong> HOME >> Web Application Services
+					&nbsp;&nbsp;&nbsp;&nbsp; </strong> <a href="was.html#e-com">E-commerce </a>
+				<span>|</span> <a href="was.html#custom">Customized Software</a> <span>|</span>
+				<a href="was.html#prof">Professional Services</a> <span>| </span><a
+					href="was.html#share">Shared Risk & Partnerships</a> <span>|</span>
+				<a href="was.html#webmet">Web Methodology</a> <span>| </span> <a
+					href="was.html#webmod">Web Model</a> <span>| </span> <a
+					href="was.html#spimod">Spiral Model</a>
+			</div>
+		</div>
+	</div>
 	<!--==========================
       About Us Section
     ============================-->
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
-    
-  <p id="subnav"><strong> HOME >> Web Application Services &nbsp;&nbsp;&nbsp;&nbsp; </strong>
-  <a href="was.html#e-com">E-commerce </a> <span>|</span>
-  <a href="was.html#custom">Customized Software</a> <span>|</span>
-  <a href="was.html#prof">Professional Services</a> <span>|
-  </span><a href="was.html#share">Shared Risk & Partnerships</a> <span>|</span>
-  <a href="was.html#webmet">Web Methodology</a> <span>| </span>
-  <a href="was.html#webmod">Web Model</a> <span>| </span>
-  <a href="was.html#spimod">Spiral Model</a> </p>
+
 	<section id="about">
 		<div class="container">
 			<div class="row about-container">
@@ -195,7 +200,7 @@
 						Integration through Business / Systems / IT / Process Analysts, QA
 						and Testing Analysts, Manpower Consulting, IT training, Corporate
 						Training and Techno Functional Consultants.</p>
-					<h5 class="title"id="share" >Shared Risk and Partnerships</h5>
+					<h5 class="title" id="share">Shared Risk and Partnerships</h5>
 				</div>
 			</div>
 
@@ -252,7 +257,7 @@
 						example is task allocation in a collaborative workgroup system and
 						task sequencing, routing applied in workflow applications.</p>
 					<img src="img/clientmodel.jpg" alt="clientmodel image">
-					</div>
+				</div>
 				<div class="col-lg-6 content order-lg-2 order-2">
 					<img src="img/workfolio.jpg" alt="clientmodel image">
 					<h5 class="title" id="webmod">Web Model</h5>
