--- a/techi/src/main/webapp/about.html
+++ b/techi/src/main/webapp/about.html
@@ -78,8 +78,8 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-active menu-has-children"><a href="home.html#contact">Contact
-							Us</a>
+					<li class="menu-active menu-has-children"><a
+						href="home.html#contact">Contact Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
@@ -97,16 +97,23 @@
   ============================-->
 	<section class="head-about"></section>
 	<!-- #hero -->
-
-	<main id="main"> 
-	<!--==========================
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<p id="subnav">
+					<strong> HOME >> ABOUT US </strong> &nbsp; &nbsp; &nbsp; &nbsp; <a
+						href="about_career.html">Career</a> <span>| </span> <a
+						href="about_client.html">Clients </a> <span>| </span> <a
+						href="home.html#contact">Contact Us </a>
+				</p>
+			</div>
+		</div>
+	</div>
+	<main id="main"> <!--==========================
       About Us Section
     ============================-->
-    
-<p id="subnav">  <strong> HOME >> ABOUT US </strong> &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="about_career.html">Career</a> <span>| </span> 
-<a href="about_client.html">Clients </a>  <span>| </span> 
-<a href="home.html#contact">Contact Us </a></p>
+
+
 	<section id="about">
 		<div class="container">
 			<div class="row about-container">
@@ -128,14 +135,14 @@
 				</div>
 				<div class="col-lg-4 background order-lg-2 order-1 wow fadeInRight"></div>
 			</div>
-			<br/>
+			<br />
 			<div class="row about-container">
-			<div class="col-lg-12 content order-lg-1 order-2">
-			<div class="icon-box wow fadeInUp">
-			<p>We strongly look towards to meet our client requirements and
-						have therefore increased our scope of activities that leads in
-						providing engineering services to meet different varied needs of
-						our client’s.</p>
+				<div class="col-lg-12 content order-lg-1 order-2">
+					<div class="icon-box wow fadeInUp">
+						<p>We strongly look towards to meet our client requirements
+							and have therefore increased our scope of activities that leads
+							in providing engineering services to meet different varied needs
+							of our client’s.</p>
 						<div class="icon">
 							<i class="fa fa-shopping-bag"></i>
 						</div>
@@ -151,11 +158,12 @@
 							allow us to seamlessly and simultaneously work with experts from
 							our various client locations.</p>
 					</div>
+				</div>
 			</div>
-			</div>
-			
+
 			<div class="row about-container">
-				<div class="col-lg-4 background-mission order-lg-1 order-1 wow fadeInRight"></div>
+				<div
+					class="col-lg-4 background-mission order-lg-1 order-1 wow fadeInRight"></div>
 				<div class="col-lg-8 content order-lg-2 order-2">
 					<h2 class="title">Mission</h2>
 					<p>"TO EXCEL AND CHERISH OUR CUSTOMERS WITH VALUE ADDED
