--- a/techi/src/main/webapp/about_career.html
+++ b/techi/src/main/webapp/about_career.html
@@ -78,8 +78,8 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-active menu-has-children"><a href="home.html#contact">Contact
-							Us</a>
+					<li class="menu-active menu-has-children"><a
+						href="home.html#contact">Contact Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
@@ -97,15 +97,20 @@
   ============================-->
 	<section class="head-career"></section>
 	<!-- #hero -->
-
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+					<strong> HOME >> ABOUT US >> Career </strong> &nbsp; &nbsp; &nbsp;
+					&nbsp; <a href="about.html">About Us</a> <span>| </span> <a
+						href="about_client.html">Clients </a> <span>| </span> <a
+						href="home.html#contact">Contact Us </a>
+			</div>
+		</div>
+	</div>
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
-    
-<p id="subnav">  <strong> HOME >> ABOUT US >> Career </strong> &nbsp; &nbsp; &nbsp; &nbsp;
-<a href="about.html">About Us</a> <span>| </span> 
-<a href="about_client.html">Clients </a>  <span>| </span> 
-<a href="home.html#contact">Contact Us </a></p>
+
 	<section id="about">
 		<div class="container">
 			<div class="row about-container">
