--- a/techi/src/main/webapp/classroom.html
+++ b/techi/src/main/webapp/classroom.html
@@ -43,7 +43,7 @@
 	<header id="header">
 		<div class="container">
 
-			<div id="logo" class="pull-left">
+			<divpadding:10px 0px 0px 30px;	 id="logo" class="pull-left">
 				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
@@ -97,11 +97,17 @@
   ============================-->
 	<section class="head-classroom"></section>
 	<!-- #hero -->
-
+	
+	<div class="container">
+			<div class="row about-container">
+				<div class="col-lg-12 content order-lg-2 order-2">
+					<strong> HOME >> Classroom </strong>
+				</div>
+			</div>
+	</div>
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
-    <p id="subnav"><strong> HOME >> Classroom </strong> </p>
 	<section id="classroom">
 		<div class="container">
 			<div class="row about-container">
