--- a/techi/src/main/webapp/qualityassurance.html
+++ b/techi/src/main/webapp/qualityassurance.html
@@ -142,7 +142,8 @@
 							<li><a href="corporatetraining.html">Corporate Training</a></li>
 						</ul></li>
 
-					<li class="menu-active menu-has-children"><a href="home.html#services">Service</a>
+					<li class="menu-active menu-has-children"><a
+						href="home.html#services">Service</a>
 						<ul>
 							<li><a href="solutiondevelopment.html">Solution
 									Development</a></li>
@@ -177,12 +178,18 @@
 
 	<!-- #header -->
 	<section id="heroid"></section>
-
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong>HOME >> Quality Assurance &nbsp;&nbsp;&nbsp;&nbsp;
+				</strong>
+			</div>
+		</div>
+	</div>
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
-    <p id="subnav"><strong> HOME >> Quality Assurance &nbsp;&nbsp;&nbsp;&nbsp; </strong>
-   
+
 	<section id="about">
 		<div class="container">
 			<div class="row">
