--- a/techi/src/main/webapp/smartodc.html
+++ b/techi/src/main/webapp/smartodc.html
@@ -112,12 +112,17 @@
 	<section id="heroid">
 	</section>
 	<!-- #hero -->
-
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong>HOME >> Smart ODC </strong> </strong>
+			</div>
+		</div>
+	</div>
 	<main id="main"> 
 	<!--==========================
       SolutionDevelopment
     ============================-->
-    <p id="subnav"><strong>HOME >> Smart ODC </strong></p>
 	<section id="about">
 		<div class="container">
 			<div class="row">
