--- a/techi/src/main/webapp/solutiondevelopment.html
+++ b/techi/src/main/webapp/solutiondevelopment.html
@@ -162,11 +162,16 @@
 
 	<!-- #header -->
 	<section id="heroid"></section>
-
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong> HOME >> Solution Development </strong>
+			</div>
+		</div>
+	</div>
 	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
-    <p id="subnav"><strong> HOME >> Solution Development </strong> </p>
 	<section id="about">
 		<div class="container">
 			<div class="row">
