--- a/techi/src/main/webapp/trainingondemand.html
+++ b/techi/src/main/webapp/trainingondemand.html
@@ -33,6 +33,7 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+
 </head>
 
 <body>
@@ -97,11 +98,17 @@
   ============================-->
 	<section class="head-traningdemand"></section>
 	<!-- #hero -->
-
+	<div class="container">
+			<div class="row about-container">
+				<div class="col-lg-12 content order-lg-2 order-2">
+					<strong> HOME >> Training on Demand </strong>
+				</div>
+			</div>
+	</div>
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
-    <p id="subnav"><strong> HOME >> Training on Demand </strong> </p>
+   
 	<section id="traningdemand">
 		<div class="container">
 			<div class="row about-container">
