main header change about and contact us position

--- a/techi/src/main/webapp/industries.html
+++ b/techi/src/main/webapp/industries.html
@@ -76,12 +76,12 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-has-children"><a href="home.html#contact">Contact
+					<li class="menu-has-children"><a href="about.html">About
 							Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
-							<li><a href="about.html">About Us</a></li>
+							<li><a href="home.html#contact">Contact Us</a></li>
 						</ul></li>
 				</ul>
 			</nav>
@@ -98,11 +98,13 @@
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
-     <p id="subnav"><strong>Industries </strong> <span>|</span>
-     <a href="industries.html#net">Networking / Telecom</a> <span>| </span> 
-     <a href="industries.html#hlt"> Health Care</a><span>|</span>
-     <a href="industries.html#mnf">Manufacturing</a> <span>| </span> 
-     <a href="industries.html#aut">Automation</a> </p>
+	<p id="subnav">
+		<strong>Industries </strong> <span>|</span> <a
+			href="industries.html#net">Networking / Telecom</a> <span>| </span> <a
+			href="industries.html#hlt"> Health Care</a><span>|</span> <a
+			href="industries.html#mnf">Manufacturing</a> <span>| </span> <a
+			href="industries.html#aut">Automation</a>
+	</p>
 	<section id="network">
 		<div class="container">
 			<div class="row about-container">
