--- a/techi/src/main/webapp/privacypolicy.html
+++ b/techi/src/main/webapp/privacypolicy.html
@@ -33,26 +33,26 @@
     License: https://bootstrapmade.com/license/
   ======================================================= -->
 <style>
-.icon-m{
-    float: left;
-    background: #fff;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    border-radius: 50%;
-    border: 1px solid #2dc997;
-        color: #2dc997;
-    font-size: 24px;
+.icon-m {
+	float: left;
+	background: #fff;
+	width: 20px;
+	height: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+	border-radius: 50%;
+	border: 1px solid #2dc997;
+	color: #2dc997;
+	font-size: 24px;
 }
 
 #about .about-container .icon-box .description1 {
-    margin-left: 40px;
-    line-height: 20px;
-    font-size: 14px;
+	margin-left: 40px;
+	line-height: 20px;
+	font-size: 14px;
 }
 </style>
 
@@ -77,7 +77,7 @@
 
 			<nav id="nav-menu-container">
 				<ul class="nav-menu">
-					<li class="menu-active"><a href="home.html">Home</a></li>
+					<li><a href="home.html">Home</a></li>
 					<li class="menu-has-children"><a href="">Training</a>
 						<ul>
 							<li><a href="classroom.html">Classroom</a></li>
@@ -104,12 +104,12 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-has-children"><a href="home.html#contact">Contact
+					<li class="menu-has-children"><a href="about.html">About
 							Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
-							<li><a href="about.html">About Us</a></li>
+							<li><a href="home.html#contact">Contact Us</a></li>
 						</ul></li>
 				</ul>
 			</nav>
@@ -151,12 +151,12 @@
 						<div class="icon-m">
 							<i class="fa fa-circle" aria-hidden="true"></i>
 						</div>
-						<p class=description1>the California Online Privacy
-							Protection Act</p>
+						<p class=description1>the California Online Privacy Protection
+							Act</p>
 					</div>
 
 					<div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-							<div class="icon-m">
+						<div class="icon-m">
 							<i class="fa fa-circle" aria-hidden="true"></i>
 						</div>
 						<p class="description1">the Children's Online Privacy
@@ -164,7 +164,7 @@
 					</div>
 
 					<div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-							<div class="icon-m">
+						<div class="icon-m">
 							<i class="fa fa-circle" aria-hidden="true"></i>
 						</div>
 						<p class="description1">Trust Guard Privacy guidelines the
@@ -175,8 +175,8 @@
 						<div class="icon-m">
 							<i class="fa fa-circle" aria-hidden="true"></i>
 						</div>
-						<p class="description1">Google Adsense / Adwords Privacy Policy
-							requirements and more!</p>
+						<p class="description1">Google Adsense / Adwords Privacy
+							Policy requirements and more!</p>
 					</div>
 
 
