--- a/techi/src/main/webapp/smartodc.html
+++ b/techi/src/main/webapp/smartodc.html
@@ -34,7 +34,6 @@
   ======================================================= -->
 
 <style type="text/css">
-
 #heroid:before {
 	content: "";
 	background: rgba(0, 0, 0, 0.6);
@@ -44,7 +43,6 @@
 	left: 0;
 	right: 0;
 }
-
 </style>
 </head>
 
@@ -92,12 +90,12 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-has-children"><a href="home.html#contact">Contact
+					<li class="menu-has-children"><a href="about.html">About
 							Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
-							<li><a href="about.html">About Us</a></li>
+							<li><a href="home.html#contact">Contact Us</a></li>
 						</ul></li>
 				</ul>
 			</nav>
@@ -109,8 +107,7 @@
 	<!--==========================
     Hero Section
   ============================-->
-	<section id="heroid">
-	</section>
+	<section id="heroid"></section>
 	<!-- #hero -->
 	<div class="container">
 		<div class="row about-container">
@@ -119,8 +116,7 @@
 			</div>
 		</div>
 	</div>
-	<main id="main"> 
-	<!--==========================
+	<main id="main"> <!--==========================
       SolutionDevelopment
     ============================-->
 	<section id="about">
