--- a/techi/src/main/webapp/solutiondevelopment.html
+++ b/techi/src/main/webapp/solutiondevelopment.html
@@ -146,12 +146,12 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-has-children"><a href="home.html#contact">Contact
-							Us</a>
+					<li class="menu-has-children"><a href="about.html">About Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
-							<li><a href="about.html">About Us</a></li>
+							<li><a href="home.html#contact">Contact
+							Us</a></li>
 						</ul></li>
 				</ul>
 			</nav>
