--- a/techi/src/main/webapp/biservices.html
+++ b/techi/src/main/webapp/biservices.html
@@ -70,7 +70,8 @@
 							<li><a href="corporatetraining.html">Corporate Training</a></li>
 						</ul></li>
 
-					<li class="menu-active menu-has-children"><a href="home.html#services">Service</a>
+					<li class="menu-active menu-has-children"><a
+						href="home.html#services">Service</a>
 						<ul>
 							<li><a href="solutiondevelopment.html">Solution
 									Development</a></li>
@@ -89,12 +90,12 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-has-children"><a href="home.html#contact">Contact
+					<li class="menu-has-children"><a href="about.html">About
 							Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
-							<li><a href="about.html">About Us</a></li>
+							<li><a href="home.html#contact">Contact Us</a></li>
 						</ul></li>
 				</ul>
 			</nav>
