--- a/techi/src/main/webapp/classroom.html
+++ b/techi/src/main/webapp/classroom.html
@@ -47,47 +47,46 @@
 				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
-			</div>
+		</div>
 
-			<nav id="nav-menu-container">
-				<ul class="nav-menu">
-					<li><a href="home.html">Home</a></li>
-					<li class="menu-active menu-has-children"><a href="">Training</a>
-						<ul>
-							<li><a href="classroom.html">Classroom</a></li>
-							<li><a href="trainingondemand.html">Training on Demand</a></li>
-							<li><a href="corporatetraining.html">Corporate Training</a></li>
-						</ul></li>
+		<nav id="nav-menu-container">
+			<ul class="nav-menu">
+				<li><a href="home.html">Home</a></li>
+				<li class="menu-active menu-has-children"><a href="">Training</a>
+					<ul>
+						<li><a href="classroom.html">Classroom</a></li>
+						<li><a href="trainingondemand.html">Training on Demand</a></li>
+						<li><a href="corporatetraining.html">Corporate Training</a></li>
+					</ul></li>
 
-					<li class="menu-has-children"><a href="home.html#services">Service</a>
-						<ul>
-							<li><a href="solutiondevelopment.html">Solution
-									Development</a></li>
-							<li><a href="prodmaintandsupport.html">Product & Support</a></li>
-							<li><a href="qualityassurance.html">Quality Assurance</a></li>
-							<li><a href="smartodc.html">Smart ODC</a>
-							<li><a href="was.html">Web Application Services</a>
-							<li><a href="biservices.html">Bi Services</a>
-						</ul></li>
+				<li class="menu-has-children"><a href="home.html#services">Service</a>
+					<ul>
+						<li><a href="solutiondevelopment.html">Solution
+								Development</a></li>
+						<li><a href="prodmaintandsupport.html">Product & Support</a></li>
+						<li><a href="qualityassurance.html">Quality Assurance</a></li>
+						<li><a href="smartodc.html">Smart ODC</a>
+						<li><a href="was.html">Web Application Services</a>
+						<li><a href="biservices.html">Bi Services</a>
+					</ul></li>
 
-					<li class="menu-has-children"><a href="industries.html">Industry</a>
-						<ul>
-							<li><a href="industries.html#network">Networking &
-									Telecom</a></li>
-							<li><a href="industries.html#healthcare">Healthcare</a></li>
-							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
-							<li><a href="industries.html#automation">Automation</a>
-						</ul></li>
-					<li class="menu-has-children"><a href="home.html#contact">Contact
-							Us</a>
-						<ul>
-							<li><a href="about_client.html">Client</a></li>
-							<li><a href="about_career.html">Career</a></li>
-							<li><a href="about.html">About Us</a></li>
-						</ul></li>
-				</ul>
-			</nav>
-			<!-- #nav-menu-container -->
+				<li class="menu-has-children"><a href="industries.html">Industry</a>
+					<ul>
+						<li><a href="industries.html#network">Networking &
+								Telecom</a></li>
+						<li><a href="industries.html#healthcare">Healthcare</a></li>
+						<li><a href="industries.html#manufacturing">Manufacturing</a></li>
+						<li><a href="industries.html#automation">Automation</a>
+					</ul></li>
+				<li class="menu-has-children"><a href="about.html">About Us</a>
+					<ul>
+						<li><a href="about_client.html">Client</a></li>
+						<li><a href="about_career.html">Career</a></li>
+						<li><a href="home.html#contact">Contact Us</a></li>
+					</ul></li>
+			</ul>
+		</nav>
+		<!-- #nav-menu-container -->
 		</div>
 	</header>
 	<!-- #header -->
@@ -97,13 +96,13 @@
   ============================-->
 	<section class="head-classroom"></section>
 	<!-- #hero -->
-	
+
 	<div class="container">
-			<div class="row about-container">
-				<div class="col-lg-12 content order-lg-2 order-2">
-					<strong> HOME >> Classroom </strong>
-				</div>
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong> HOME >> Classroom </strong>
 			</div>
+		</div>
 	</div>
 	<main id="main"> <!--==========================
       About Us Section
