--- a/techi/src/main/webapp/about.html
+++ b/techi/src/main/webapp/about.html
@@ -144,7 +144,7 @@
 							in providing engineering services to meet different varied needs
 							of our client’s.</p>
 						<div class="icon">
-							<i class="fa fa-shopping-bag"></i>
+							<i class="fa fa-bandcamp"></i>
 						</div>
 						<p class="description">Our service delivery processes are
 							designed to meet our client's requirements.</p>
@@ -152,7 +152,7 @@
 
 					<div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
 						<div class="icon">
-							<i class="fa fa-photo"></i>
+							<i class="fa fa-bandcamp"></i>
 						</div>
 						<p class="description">Our engineering services processes
 							allow us to seamlessly and simultaneously work with experts from
