--- a/techi/src/main/webapp/industries.html
+++ b/techi/src/main/webapp/industries.html
@@ -94,17 +94,20 @@
   ============================-->
 	<section class="head-industry"></section>
 	<!-- #hero -->
-
+	<div class="container">
+		<div class="row about-container">
+			<div class="col-lg-12 content order-lg-2 order-2">
+				<strong>Industries </strong> <span>|</span> <a
+					href="industries.html#network">Networking / Telecom</a> <span>|
+				</span> <a href="industries.html#healthcare"> Health Care</a><span>|</span> <a
+					href="industries.html#manufacturing">Manufacturing</a> <span>| </span> <a
+					href="industries.html#automation">Automation</a>
+			</div>
+		</div>
+	</div>
 	<main id="main"> <!--==========================
       About Us Section
     ============================-->
-	<p id="subnav">
-		<strong>Industries </strong> <span>|</span> <a
-			href="industries.html#net">Networking / Telecom</a> <span>| </span> <a
-			href="industries.html#hlt"> Health Care</a><span>|</span> <a
-			href="industries.html#mnf">Manufacturing</a> <span>| </span> <a
-			href="industries.html#aut">Automation</a>
-	</p>
 	<section id="network">
 		<div class="container">
 			<div class="row about-container">
