--- a/techi/src/main/webapp/classroom.html
+++ b/techi/src/main/webapp/classroom.html
@@ -43,7 +43,7 @@
 	<header id="header">
 		<div class="container">
 
-			<divpadding:10px 0px 0px 30px;	 id="logo" class="pull-left">
+			<div id="logo" class="pull-left">
 				<a href="#hero" class="header-icon">TECH ICON SOLUTION INC</a>
 				<!-- Uncomment below if you prefer to use a text logo -->
 				<!--<h1><a href="#hero">Regna</a></h1>-->
