--- a/techi/src/main/webapp/about_client.html
+++ b/techi/src/main/webapp/about_client.html
@@ -78,7 +78,8 @@
 							<li><a href="industries.html#manufacturing">Manufacturing</a></li>
 							<li><a href="industries.html#automation">Automation</a>
 						</ul></li>
-					<li class="menu-active menu-has-children"><a href="about.html">About Us</a>
+					<li class="menu-active menu-has-children"><a href="about.html">About
+							Us</a>
 						<ul>
 							<li><a href="about_client.html">Client</a></li>
 							<li><a href="about_career.html">Career</a></li>
@@ -96,38 +97,46 @@
   ============================-->
 	<section class="head-client"></section>
 	<!-- #hero -->
-<div class="container">
+	<div class="container">
 		<div class="row about-container">
 			<div class="col-lg-12 content order-lg-2 order-2">
-				 <p id="subnav">  <strong> HOME >> ABOUT US >> Clients </strong> &nbsp; &nbsp; &nbsp; &nbsp;
-  <a href="about.html">About Us</a> <span>| </span> 
-  <a href="career.html">Career </a>  <span>| </span> 
-  <a href="home.html#contact">Contact Us </a></p>
-	<section id="about_client">
-		<div class="container">
-			<div class="row about-container">
-				<div class="col-lg-12 content order-lg-1 order-2">
-					<h3 class="title">CLIENTS</h3>
-					<p>We abbreviate our success for the confidence shown and their
-						reliance on our services marked by respect, our clients rely on us
-						for continuation of our services. Our clients derive the best in
-						us and constantly help us in giving us opportunities time and
-						again.</p>
-					<p>We work with utmost zeal and our team is constantly
-						upgrading themselves in order to scale up their area of expertise
-						and as a result get good deal of experience.</p>
-				</div>
-			</div>
-			
-		</div>
-	</section>
+					<strong> HOME >> ABOUT US >> Client </strong> &nbsp; &nbsp; &nbsp;
+					&nbsp; <a href="about.html">About Us</a> <span>| </span> <a
+						href="about_client.html">Clients </a> <span>| </span> <a
+						href="home.html#contact">Contact Us </a>
 			</div>
 		</div>
 	</div>
-	<main id="main"> <!--==========================
+	
+	<main id="main">
+	<section>
+	<div class="container">
+		<div class="row about-container">
+			<section id="about_client">
+				<div class="container">
+					<div class="row about-container">
+						<div class="col-lg-12 content order-lg-1 order-2">
+							<h3 class="title">CLIENTS</h3>
+							<p>We abbreviate our success for the confidence shown and
+								their reliance on our services marked by respect, our clients
+								rely on us for continuation of our services. Our clients derive
+								the best in us and constantly help us in giving us opportunities
+								time and again.</p>
+							<p>We work with utmost zeal and our team is constantly
+								upgrading themselves in order to scale up their area of
+								expertise and as a result get good deal of experience.</p>
+						</div>
+					</div> <!-- #about -->
+
+				</div>
+			</section>
+		</div>
+	</div>
+	</section>
+	 <!--==========================
       About Us Section
     ============================-->
-	<!-- #about --> </main>
+     </main>
 
 	<!--==========================
     Footer
