--- a/techi/src/main/webapp/trainingondemand.html
+++ b/techi/src/main/webapp/trainingondemand.html
@@ -33,6 +33,18 @@
     Author: BootstrapMade.com
     License: https://bootstrapmade.com/license/
   ======================================================= -->
+<style>
+@media ( max-width : 1024px) {
+.head-traningdemand {
+    width: 100%;
+    margin-top: 60px;
+    height: 10vh;
+    background: url(../img/ondemand.png) center;
+    background-size: cover;
+    position: relative;
+}
+}
+</style>
 
 </head>
 
